Allow multiple directory nesting in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@ foreach(file ${FILES})
         get_filename_component(fname ${file} NAME)
         get_filename_component(fpath ${file} PATH)
         message(STATUS "Adding target for ${fname} in ${fpath}")
-        add_executable(${fpath}_${fname} ${fpath}/${fname})
+        string(REPLACE "/" "_" fnamepath ${fpath})
+        add_executable(${fnamepath}_${fname} ${fpath}/${fname})
+#        add_executable(${fpath}_${fname} ${fpath}/${fname})
     endif()
 endforeach()
